--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation "android.arch.work:work-runtime:1.0.1"
+    implementation 'androidx.work:work-runtime:2.7.1'
+//    implementation "android.arch.work:work-runtime:1.0.1"
 }
