--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,6 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 android.enableJetifier=true
+
+# https://stackoverflow.com/questions/71559269/why-does-gradle-initializing-sometimes-take-very-long
+org.gradle.vfs.watch=false
